index.html update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h3 class="title imprint-emboss-title">Business Systems Advisor &amp; Consultant</h3>
 
             <p class="content-summary">Over 15 years experience, specialising in Business Systems & Processes</p>
-            <p class="content-summary"><i>- Automation, Integration, Migration and Streamlining -</i></p>
+            <p class="content-summary"><i>- <strong>A</strong>utomation, <strong>I</strong>ntegration, <strong>M</strong>igration and <strong>S</strong>treamlining -</i></p>
 
             <p class="content-social">
               <a href="https://github.com/terencelim" target="_blank" title="Github"><i class="fa fa-github fa-2x"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
