--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
             <hr class="custom">
             <h3 class="title imprint-emboss-title">Business Systems Advisor &amp; Consultant</h3>
 
-            <p class="content-summary">Over 15 years experience, specialising in Business Systems & Processes</p>
+            <p class="content-summary">Specialist in Business and Robotics Processes Automation</p>
             <p class="content-summary"><i>- <strong>A</strong>utomation, <strong>I</strong>ntegration, <strong>M</strong>igration and <strong>S</strong>treamlining -</i></p>
 
             <p class="content-social">
               <a href="https://github.com/terencelim" target="_blank" title="Github"><i class="fa fa-github fa-2x"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="https://twitter.com/terencelmw" target="_blank" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="https://au.linkedin.com/in/terencelmw" target="_blank" title="LinkedIn"><i class="fa fa-linkedin fa-2x"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://twitter.com/terencelyt28" target="_blank" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;           
               <a href="http://www.google.com/recaptcha/mailhide/d?k=01BPE2RGYm-Kl0FIUk1CmUWQ==&amp;c=bKHaMHg79iAm4MVg6t-HoNqIarEdUfVu0yd0cQl73iM="
                  onclick="revealEm(); return false;"
                  title="Reveal this e-mail address"><i class="fa fa-envelope fa-2x"></i></a>
