--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           <div class="inner cover">
             <h1 class="imprint-emboss">Terence Lim</h1>
             <hr class="custom">
-            <h3 class="title imprint-emboss-title">Business Systems Advisor &amp; Consultant</h3>
+            <h3 class="title imprint-emboss-title">Digital Strategy and Transformation Practitioner</h3>
 
-            <p class="content-summary">Specialist in Business and Robotics Processes Automation</p>
-            <p class="content-summary"><i>- <strong>A</strong>utomation, <strong>I</strong>ntegration, <strong>M</strong>igration and <strong>S</strong>treamlining -</i></p>
+            <p class="content-summary">Specialist in Digital Transformation and Intelligent Automation</p>
+            <p class="content-summary"><i>- Automation, Integration, Transformation and Optimisation -</i></p>
 
             <p class="content-social">
               <a href="https://github.com/terencelim" target="_blank" title="Github"><i class="fa fa-github fa-2x"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;
@@ -73,13 +73,14 @@
                  title="Reveal this e-mail address"><i class="fa fa-envelope fa-2x"></i></a>
             </p>
 
+            <!--
             <p class="content-consult">Available for consultations. Get in contact with me via
               <a href="http://www.google.com/recaptcha/mailhide/d?k=01BPE2RGYm-Kl0FIUk1CmUWQ==&amp;c=bKHaMHg79iAm4MVg6t-HoNqIarEdUfVu0yd0cQl73iM="
                  onclick="revealEm(); return false;"
                  title="Reveal this e-mail address"
                  class="contact-email">email</a>.
             </p>
-
+            -->
           </div>
 
           <div class="mastfoot">
