--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
           <div class="inner cover">
             <h1 class="imprint-emboss">Terence Lim</h1>
             <hr class="custom">
-            <h3 class="title imprint-emboss-title">Digital Strategy and Transformation Practitioner</h3>
+            <!-- <h3 class="title imprint-emboss-title">Digital Strategy, Transformation and Intelligent Automation Practitioner</h3> -->
 
-            <p class="content-summary">Specialist in Digital Transformation and Intelligent Automation</p>
+            <p class="content-summary">Digital Strategy, Transformation and Intelligent Automation Practitioner</p>
             <p class="content-summary"><i>- Automation, Integration, Transformation and Optimisation -</i></p>
 
             <p class="content-social">
