--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <hr class="custom">
             <!-- <h3 class="title imprint-emboss-title">Digital Strategy, Transformation and Intelligent Automation Practitioner</h3> -->
 
-            <p class="content-summary">Digital Strategy, Transformation and Intelligent Automation Practitioner</p>
-            <p class="content-summary"><i>- Automation, Integration, Transformation and Optimisation -</i></p>
+            <p class="content-summary"><strong>Digital Strategy, Transformation and Intelligent Automation Practitioner</strong></p>
+            <p class="content-summary"><i>- Strategy | Transformation | Optimisation | Automation | Integration -</i></p>
 
             <!--
             <p class="content-social">
