--- a/76428318b641e994b33f5894daafa31b.html
+++ b/76428318b641e994b33f5894daafa31b.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <title>COVID-19 INFO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <style>
 body {
