--- a/c19.html
+++ b/c19.html
@@ -4,33 +4,34 @@
       <title>COVID-19 NSW Cases</title>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/cs-style.css?v=20210630000500">
+    <link rel="stylesheet" href="./css/cs-style.css?v=20210601133000">
   </head>
   <body>
-    <h2>COVID-19 NSW Cases by Suburb</h2>
+    <h2>COVID-19 NSW Cases by Suburb 
+      <a href="https://www.terencelim.com/76428318b641e994b33f5894daafa31b.html" target="_blank">[ COVID-19 Info ]</a>
+      <a href="https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/case_locations_map.html" target="_blank">[ COVID-19 Case Map ]</a>
+      
+    </h2>
     <table class='table borderless'>
       <tr>
-        <td colspan="2"><label for="datasource">Data Source [ <span class="casedata">File Date: <span id="id01"></span></span> | <span class="casedata">Total Cases: <span id="id03"></span></span> ]</label></td>
-      </tr>
-      <tr>
-        <td style="width: auto;">
-          <input type="text" class="form-control" id="location" aria-describedby="loadHelp" value="https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations/resource/f3a28eed-8c2a-437b-8ac1-2dab3cf760f9" placeholder="Enter Data Source">
+        <td class="dInput">
+          <button type="button" class="btn btn-danger btn-load" id="loadData" onclick="javascript:getData();">Get Latest Case Data</button>
         </td>
-        <td style="width: 188px;">
-          <button type="button" class="btn btn-danger" id="loadData" onclick="javascript:test();">Get Latest Case Data</button>
+        <td class="dInput dResults">
+          <label for="datasource">Data Source [ <span class="casedata">File Date: <span id="id01"></span></span> | <span class="casedata">Total Cases: <span id="id03"></span></span> ]</label>
         </td>
       </tr>
-      <!-- <tr>
-        <td colspan="2">
-          <small id="emailHelp" class="form-text text-muted">Data Program: https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations/resource/f3a28eed-8c2a-437b-8ac1-2dab3cf760f9</small>
-        </td>
-      </tr> -->
       <tr>
-        <td colspan="2"><label for="datasource">Search by Suburb</label></td>
-      </tr>
-      <tr>
-        <td colspan="2">
+        <td class="dInput">
           <input type="text" class="form-control" id="suburb" onkeyup="javascript:checkSuburb();" placeholder="Enter Suburb">
+        </td>
+        <td class="dInput dResults">
+          <label for="datasource">Search by Suburb [ <span class="casedata">Results Matched: <span id="id04"></span></span> ]</label>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" class="dInput" id="suburbList">
+          <button type="button" class="btn btn-success btn-suburb" onclick="javascript:document.getElementById('suburb').value='';checkSuburb();">All Results</button><br>
         </td>
       </tr>
     </table>
@@ -42,6 +43,6 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js"></script> -->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./js/cs-script.js?v=20210630000900"></script>
+    <script src="./js/cs-script.js?v=20210601133000"></script>
   </body>
 </html>
