--- a/c19.html
+++ b/c19.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <title>COVID-19 NSW Cases</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/cs-style.css?v=20210601133700">
-  </head>
-  <body>
-    <h2>COVID-19 NSW Cases by Suburb 
-      <a href="https://www.terencelim.com/76428318b641e994b33f5894daafa31b.html" target="_blank">[ COVID-19 Info ]</a>
-      <a href="https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/case_locations_map.html" target="_blank">[ COVID-19 Case Map ]</a>
-      
-    </h2>
-    <table class='table borderless'>
-      <tr>
-        <td class="dInput">
-          <button type="button" class="btn btn-danger btn-load" id="loadData" onclick="javascript:getData();">Get Latest Case Data</button>
-        </td>
-        <td class="dInput dResults">
-          <label for="datasource">Data Source [ <span class="casedata">File Date: <span id="id01"></span></span> | <span class="casedata">Total Cases: <span id="id03"></span></span> ]</label>
-        </td>
-      </tr>
-      <tr>
-        <td class="dInput">
-          <input type="text" class="form-control" id="suburb" onkeyup="javascript:checkSuburb();" placeholder="Enter Suburb">
-        </td>
-        <td class="dInput dResults">
-          <label for="datasource">Search by Suburb [ <span class="casedata">Results Matched: <span id="id04"></span></span> ]</label>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" class="dInput" id="suburbList">
-          <button type="button" class="btn btn-success btn-suburb" onclick="javascript:document.getElementById('suburb').value='';checkSuburb();">All Results</button><br>
-        </td>
-      </tr>
-    </table>
-
-    <!-- <input type="text" id="location" value="https://data.nsw.gov.au/data/dataset/0a52e6c1-bc0b-48af-8b45-d791a6d8e289/resource/f3a28eed-8c2a-437b-8ac1-2dab3cf760f9/download/covid-case-locations-20210630-1623.json" style="width:350px;"> -->
-    <!-- onclick="javascript:loadData(document.getElementById('location').value);" -->
-    <div id="id02"></div>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js"></script> -->
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./js/cs-script.js?v=20210601133700"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>COVID-19 NSW Cases</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><link rel="stylesheet" href="./css/cs-style.min.css?v=20210601133700"></head><body><h2>COVID-19 NSW Cases by Suburb <a href="https://www.terencelim.com/76428318b641e994b33f5894daafa31b.html" target="_blank">[ COVID-19 Info ]</a> <a href="https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/case_locations_map.html" target="_blank">[ COVID-19 Case Map ]</a></h2><table class="table borderless"><tr><td class="dInput"><button type="button" class="btn btn-danger btn-load" id="loadData" onclick="getData();">Get Latest Case Data</button></td><td class="dInput dResults"><label for="datasource">Data Source [ <span class="casedata">File Date: <span id="id01"></span></span> | <span class="casedata">Total Cases: <span id="id03"></span></span> ]</label></td></tr><tr><td class="dInput"><input type="text" class="form-control" id="suburb" onkeyup="checkSuburb();" placeholder="Enter Suburb"></td><td class="dInput dResults"><label for="datasource">Search by Suburb [ <span class="casedata">Results Matched: <span id="id04"></span></span> ]</label></td></tr><tr><td colspan="2" class="dInput" id="suburbList"><button type="button" class="btn btn-success btn-suburb" onclick="document.getElementById('suburb').value='';checkSuburb();">All Results</button><br></td></tr></table><div id="id02"></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script><script src="./js/cs-script.min.js?v=20210601133700"></script></body></html>
