--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content"Business Systems Advisor &amp; Consultant | Sydney, Australia.">
+    <meta name="description" content"Digital Strategy, Transformation and Intelligent Automation | Sydney, Australia.">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Terence Lim">
 
-    <link rel="shortcut icon" href="http://www.terencelim.com/favicon.ico?v1.0.0" type="image/x-icon" />
-    <link rel="icon" href="http://www.terencelim.com/favicon.ico?v1.0.0" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
-    <link rel="icon" href="http://www.terencelim.com/favicon.ico?v1.0.0" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://www.terencelim.com/favicon.ico?v1.0.0" type="image/x-icon" />
+    <link rel="icon" href="https://www.terencelim.com/favicon.ico?v1.0.0" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="https://www.terencelim.com/favicon.ico?v1.0.0" type="image/x-icon" />
 
-    <title>Terence Lim | Business Advisor &amp; Consultant | Sydney, Australia</title>
+    <title>Terence Lim | Digital Strategy, Transformation and Intelligent Automation | Sydney, Australia</title>
 
     <link href="./bootstrap-3.3.5-dist/css/bootstrap.min.css?v3.3.5" rel="stylesheet">
 
