--- a/76428318b641e994b33f5894daafa31b.html
+++ b/76428318b641e994b33f5894daafa31b.html
@@ -1,97 +1,1 @@
-<!doctype html>
-
-<html>
-  <head>
-    <title>COVID-19 INFO</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-    <style>
-body {
-  margin: 25px;
-}
-
-h1, h2 {
-  font-size: 22pt;
-  font-weight: bold;
-}
-
-h2 {
-  font-size: 18pt;
-}
-
-ul > li {
-  color: red;
-}
-    </style>  
-  </head>
-
-  <body>
-<h1 id="30-06-2021-11-45-48">30/06/2021, 11:45:48</h1>
-<h2 id="cases-updates-locations-and-maps">Cases Updates, Locations and Maps</h2>
-<ol>
-<li><p><strong>Map of NSW COVID-19 [ case locations ]</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/case_locations_map.html'>https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/case_locations_map.html</a>  </p>
-</li>
-<li><p><strong>Map of NSW COVID-19 [ positive cases and testing by postcode ]</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/index.html'>https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/index.html</a>  </p>
-</li>
-<li><p><strong>Current COVID-19 case locations | NSW Government</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://www.nsw.gov.au/covid-19/latest-news-and-updates'>https://www.nsw.gov.au/covid-19/latest-news-and-updates</a>  </p>
-<p>
-  <ul>
-<li>Updated COVID-19 rules  </li>
-<li>NSW COVID-19 case locations  </li>
-<li>Transmission venues of concern  </li>
-<li>Public transport routes  </li>
-<li>Flights with confirmed COVID-19 cases  </li>
-<li>Interstate case locations  </li>
-<li>Travellers from New Zealand   </li>
-<li>Sewage testing  </li>
-<li>Daily statistics on cases, tests and vaccination  </li>
-<li>Related information  </li>
-</ul>
-  </p>
-</li>
-<li><p><strong>Latest COVID-19 case locations and alerts in NSW - COVID-19 (Coronavirus)</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://www.health.nsw.gov.au/Infectious/covid-19/Pages/case-locations-and-alerts.aspx'>https://www.health.nsw.gov.au/Infectious/covid-19/Pages/case-locations-and-alerts.aspx</a>  </p>
-<p>
-  <ul>
-<li>Areas with increased testing  </li>
-<li>Transmission venues of concern  </li>
-<li>Close contacts - Get tested immediately and self-isolate for 14 days  </li>
-<li>Casual contacts - Get tested immediately and self-isolate until you get a negative result  </li>
-<li>Casual contacts – Get tested immediately (people with no symptoms do not need to self-isolate)  </li>
-<li>Public transport routes  </li>
-<li>Flights  </li>
-<li>NSW COVID-19 Case locations map  </li>
-<li>New Zealand COVID-19 case locations  </li>
-<li>ACT COVID-19 case locations  </li>
-<li>Victorian COVID-19 case locations  </li>
-<li>Queensland COVID-19 case locations  </li>
-<li>Northern Territory COVID-19 case locations  </li>
-<li>Western Australia COVID-19 case locations  </li>
-<li>COVID-19 virus fragments detected in sewage  </li>
-</ul>
-  </p>
-</li>
-<li><p><strong>Find the facts about COVID-19 | NSW Government</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://www.nsw.gov.au/covid-19/find-the-facts-about-covid-19'>https://www.nsw.gov.au/covid-19/find-the-facts-about-covid-19</a>  </p>
-<p>
-  <ul>
-<li>NSW COVID-19 statistics  </li>
-<li>Vaccination totals  </li>
-<li>Map of NSW COVID-19 positive cases and testing by postcode  </li>
-<li>NSW COVID-19 datasets  </li>
-<li>Cases by notification date, age group and gender  </li>
-<li>Related information  </li>
-</ul>
-  </p>
-</li>
-</ol>
-<hr>
-<h2 id="program-data">Program Data</h2>
-<ol>
-<li><p><strong>NSW COVID-19 data | Data.NSW</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://data.nsw.gov.au/nsw-covid-19-data'>https://data.nsw.gov.au/nsw-covid-19-data</a>  </p>
-</li>
-<li><p><strong>NSW COVID-19 case locations | Data.NSW</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations'>https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations</a>  </p>
-</li>
-<li><p><strong>Suburbs JSON</strong><br><strong><em>URL:</em></strong> <a target="_blank" href='https://www.nsw.gov.au/dcs_clinics_manager/suburbs?dataType=json'>https://www.nsw.gov.au/dcs_clinics_manager/suburbs?dataType=json</a>  </p>
-</li>
-</ol>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js">
-  </body>
-</html>
+<!doctype html><html><head><title>COVID-19 INFO</title><script async src="https://www.googletagmanager.com/gtag/js?id=G-PX0M0WNCJP"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-PX0M0WNCJP")</script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"><style>body{margin:25px}h1,h2{font-size:22pt;font-weight:700}h2{font-size:18pt}ul>li{color:red}</style></head><body><h1 id="30-06-2021-11-45-48">30/06/2021, 11:45:48</h1><h2 id="cases-updates-locations-and-maps">Cases Updates, Locations and Maps</h2><ol><li><p><strong>Map of NSW COVID-19 [ case locations ]</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/case_locations_map.html">https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/case_locations_map.html</a></p></li><li><p><strong>Map of NSW COVID-19 [ positive cases and testing by postcode ]</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/index.html">https://nswdac-covid-19-postcode-heatmap.azurewebsites.net/index.html</a></p></li><li><p><strong>Current COVID-19 case locations | NSW Government</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://www.nsw.gov.au/covid-19/latest-news-and-updates">https://www.nsw.gov.au/covid-19/latest-news-and-updates</a></p><p></p><ul><li>Updated COVID-19 rules</li><li>NSW COVID-19 case locations</li><li>Transmission venues of concern</li><li>Public transport routes</li><li>Flights with confirmed COVID-19 cases</li><li>Interstate case locations</li><li>Travellers from New Zealand</li><li>Sewage testing</li><li>Daily statistics on cases, tests and vaccination</li><li>Related information</li></ul><p></p></li><li><p><strong>Latest COVID-19 case locations and alerts in NSW - COVID-19 (Coronavirus)</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://www.health.nsw.gov.au/Infectious/covid-19/Pages/case-locations-and-alerts.aspx">https://www.health.nsw.gov.au/Infectious/covid-19/Pages/case-locations-and-alerts.aspx</a></p><p></p><ul><li>Areas with increased testing</li><li>Transmission venues of concern</li><li>Close contacts - Get tested immediately and self-isolate for 14 days</li><li>Casual contacts - Get tested immediately and self-isolate until you get a negative result</li><li>Casual contacts – Get tested immediately (people with no symptoms do not need to self-isolate)</li><li>Public transport routes</li><li>Flights</li><li>NSW COVID-19 Case locations map</li><li>New Zealand COVID-19 case locations</li><li>ACT COVID-19 case locations</li><li>Victorian COVID-19 case locations</li><li>Queensland COVID-19 case locations</li><li>Northern Territory COVID-19 case locations</li><li>Western Australia COVID-19 case locations</li><li>COVID-19 virus fragments detected in sewage</li></ul><p></p></li><li><p><strong>Find the facts about COVID-19 | NSW Government</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://www.nsw.gov.au/covid-19/find-the-facts-about-covid-19">https://www.nsw.gov.au/covid-19/find-the-facts-about-covid-19</a></p><p></p><ul><li>NSW COVID-19 statistics</li><li>Vaccination totals</li><li>Map of NSW COVID-19 positive cases and testing by postcode</li><li>NSW COVID-19 datasets</li><li>Cases by notification date, age group and gender</li><li>Related information</li></ul><p></p></li></ol><hr><h2 id="program-data">Program Data</h2><ol><li><p><strong>NSW COVID-19 data | Data.NSW</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://data.nsw.gov.au/nsw-covid-19-data">https://data.nsw.gov.au/nsw-covid-19-data</a></p></li><li><p><strong>NSW COVID-19 case locations | Data.NSW</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations">https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations</a></p></li><li><p><strong>Suburbs JSON</strong><br><strong><em>URL:</em></strong> <a target="_blank" href="https://www.nsw.gov.au/dcs_clinics_manager/suburbs?dataType=json">https://www.nsw.gov.au/dcs_clinics_manager/suburbs?dataType=json</a></p></li></ol><script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js"></script></body></html>
