--- a/5l00t/worldclock_and_timer.html
+++ b/5l00t/worldclock_and_timer.html
@@ -94,7 +94,10 @@
     <br>
     <table>
         <tr>
-            <td class="map_icons"><a href="https://www.timeanddate.com/time/map/#!cities=214,242,240,255,224,33,136,256" target="_blank"  title="Time Zone Map"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Time Zone Map"></a></td>
+            <td colspan="2" class="map_icons"><a href="https://www.timeanddate.com/time/map/#!cities=214,242,240,255,224,33,136,256" target="_blank"  title="Time Zone Map"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Time Zone Map"></a></td>
+            <td colspan="2" class="map_icons"><a href="https://everytimezone.com/" target="_blank"  title="Every Time Zone Map"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Every Time Zone Map"></a></td>
+        </tr>
+        <tr>
             <td class="map_icons"><a href="img/standard_timezones_of_the_world.png" target="_blank" title="Standard Time Zones with DST"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Standard Time Zones with DST"></a></td>
             <td class="map_icons"><a href="img/5405d55887909032bc8016afe3f65796.jpg" target="_blank" title="World Map of Local Time Zones with DST"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="World Map of Local Time Zones with DST"></a></td>
             <td class="map_icons"><a href="img/world-time_3.webp" target="_blank" title="Worldwide Map of Local Time Zones"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Worldwide Map of Local Time Zones"></a></td>
