--- a/5l00t/worldclock_and_timer.html
+++ b/5l00t/worldclock_and_timer.html
@@ -95,7 +95,8 @@
     <table>
         <tr>
             <td colspan="2" class="map_icons"><a href="https://www.timeanddate.com/time/map/#!cities=214,242,240,255,224,33,136,256" target="_blank"  title="Time Zone Map"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Time Zone Map"></a></td>
-            <td colspan="2" class="map_icons"><a href="https://everytimezone.com/" target="_blank"  title="Every Time Zone Map"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Every Time Zone Map"></a></td>
+            <td class="map_icons"><a href="https://everytimezone.com/" target="_blank"  title="Every Time Zone Map"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Every Time Zone Map"></a></td>
+            <td class="map_icons"><a href="https://www.worldtimezone.com/" target="_blank"  title="World Time Zone"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="World Time Zone"></a></td>
         </tr>
         <tr>
             <td class="map_icons"><a href="img/standard_timezones_of_the_world.png" target="_blank" title="Standard Time Zones with DST"><img class="map_icon" src="img/emojigraph_org_globe-showing-europe-africa_1f30d.png" alt="Standard Time Zones with DST"></a></td>
@@ -105,11 +106,16 @@
         </tr>
     </table>
 
-    <h2>https://www.timeanddate.com/</h2>
+    <h2>https://www.timeanddate.com/ &amp; Wikipedia</h2>
     <p>
+        <a href="https://www.timeanddate.com/time/" target="_blank">Time Overview</a><br>
+        <a href="https://www.timeanddate.com/worldclock/meeting.html" target="_blank">World Clock Meeting Planner</a><br>
+        <a href="https://www.timeanddate.com/time/dst/2021.html" target="_blank">Daylight Saving Time Around the World 2021</a><br>
         <a href="https://www.timeanddate.com/time/difference/" target="_blank">Time Difference between a Location and the World</a><br>
         <a href="https://www.timeanddate.com/time/change/" target="_blank">Dates for Daylight Saving Time and Clock Changes – City Lookup</a><br>
-        <a href="https://www.timeanddate.com/time/zones/" target="_blank">Time Zone Abbreviations - Worldwide List</a>
+        <a href="https://www.timeanddate.com/time/zones/" target="_blank">Time Zone Abbreviations - Worldwide List</a><br>
+        <a href="https://en.wikipedia.org/wiki/Daylight_saving_time_by_country" target="_blank">Daylight saving time by country</a>
+
     </p>
 
     <!-- <span style='font-size:100px;'>&#127759;</span> -->
